making the infinity stones light up

--- a/game.html
+++ b/game.html
@@ -13,12 +13,12 @@
   </header>
   <main>
     <div class="infinity">
-      <div class="stones space"></div>
-      <div class="stones reality"></div>
-      <div class="stones mind"></div>
-      <div class="stones power"></div>
-      <div class="stones time"></div>
-      <div class="stones soul"></div>
+      <div id="space" class="stones">Space</div>
+      <div id="reality" class="stones">Reality</div>
+      <div id="mind" class="stones">Mind</div>
+      <div id="power" class="stones">Power</div>
+      <div id="time" class="stones">Time</div>
+      <div id="soul" class="stones">Soul</div>
     </div>
     <div class="container">
       <div id="phase1" class="difficulty btn">
