created flip animation, set the stage for phase 1, need to put photos

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container">
       <div id="phase1" class="difficulty btn">
-        <a href="#"><h1>Phase I</h1></a>
+        <a href="phase1.html"><h1>Phase I</h1></a>
       </div>
       <div id="phase2" class="difficulty btn">
         <a href="#"><h1>Phase II</h1></a>
