--- a/phase1.html
+++ b/phase1.html
@@ -3,16 +3,76 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/gameStyles.css">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
     <title>Marvel Memory Game | Phase I</title>
   </head>
   <body>
     <header>
       <h1>Phase I</h1>
+      <h2>Click Any Spot to Start</h2>
     </header>
     <main>
       <div class="container">
-        
+        <div class="row">
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"><img src="images/thor.jpg" alt="thor"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"><img src="images/iron_man.jpg" alt="iron_man"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"><img src="images/hawkeye.jpg" alt="hawkeye"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </div>
       </div>
     </main>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/mechanics.js"></script>
   </body>
 </html>
