created theshuffle function, got the characters to flip and flip back

--- a/phase1.html
+++ b/phase1.html
@@ -15,55 +15,55 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="character">
+          <div id="s1" class="character">
             <div class="front"></div>
             <div class="back"><img src="images/thor.jpg" alt="thor"></div>
           </div>
-          <div class="character">
+          <div id="s2" class="character">
             <div class="front"></div>
             <div class="back"><img src="images/iron_man.jpg" alt="iron_man"></div>
           </div>
-          <div class="character">
+          <div id="s3" class="character">
             <div class="front"></div>
             <div class="back"><img src="images/hawkeye.jpg" alt="hawkeye"></div>
           </div>
-          <div class="character">
+          <div id="s4" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
         </div>
         <div class="row">
-          <div class="character">
+          <div id="s5" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
-          <div class="character">
+          <div id="s6" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
-          <div class="character">
+          <div id="s7" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
-          <div class="character">
+          <div id="s8" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
         </div>
         <div class="row">
-          <div class="character">
+          <div id="s9" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
-          <div class="character">
+          <div id="s10" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
-          <div class="character">
+          <div id="s11" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
-          <div class="character">
+          <div id="s12" class="character">
             <div class="front"></div>
             <div class="back"></div>
           </div>
