managed to get the images to be randomly assorted

--- a/phase1.html
+++ b/phase1.html
@@ -17,16 +17,16 @@
         <div class="row">
           <div id="s1" class="character">
             <div class="front"></div>
-            <div class="back"><img src="images/thor.jpg" alt="thor"></div>
+            <div class="back"></div>
           </div>
           <div id="s2" class="character">
             <div class="front"></div>
-            <div class="back"><img src="images/iron_man.jpg" alt="iron_man"></div>
+            <div class="back"></div>
           </div>
           <!-- id="s3" -->
           <div id="s3" class="character">
             <div class="front"></div>
-            <div class="back"><img src="images/hawkeye.jpg" alt="hawkeye"></div>
+            <div class="back"></div>
           </div>
           <!-- id="s4" -->
           <div id="s4" class="character">
