--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
         <a href="phase1.html"><h1>Phase I</h1></a>
       </div>
       <div id="phase2" class="difficulty btn">
-        <a href="#"><h1>Phase II</h1></a>
+        <a href="phase2.html"><h1>Phase II</h1></a>
       </div>
       <div id="phase3" class="difficulty btn">
         <a href="#"><h1>Phase III</h1></a>
