--- a/phase1.html
+++ b/phase1.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/gameStyles.css">
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
     <title>Marvel Memory Game | Phase I</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
