--- a/phase2.html
+++ b/phase2.html
@@ -4,10 +4,167 @@
   <head>
     <meta charset="utf-8">
     <title>Marvel Memory Game | Phase II</title>
+    <link rel="stylesheet" href="css/gameStyles.css">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <h1>Phase I</h1>
+      <h1>Phase II</h1>
+      <h2>Click Any Spot to Start</h2>
     </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div id="s1" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s2" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s3" -->
+          <div id="s3" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s4" -->
+          <div id="s4" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s5" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s6" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s7" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s8" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </div>
+        <div class="row">
+          <!-- id="s5" -->
+          <div id="s9" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s10" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s3" -->
+          <div id="s11" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s4" -->
+          <div id="s12" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s13" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s14" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s15" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s16" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div id="s17" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s18" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s3" -->
+          <div id="s19" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s4" -->
+          <div id="s20" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s21" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s22" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s23" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s24" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div id="s25" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s26" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s3" -->
+          <div id="s27" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <!-- id="s4" -->
+          <div id="s28" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s29" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s30" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s31" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+          <div id="s32" class="character">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/mechanics.js"></script>
   </body>
 </html>
