phase 3 initiated, game essentially complete

--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
         <a href="phase2.html"><h1>Phase II</h1></a>
       </div>
       <div id="phase3" class="difficulty btn">
-        <a href="#"><h1>Phase III</h1></a>
+        <a href="phase3.html"><h1>Phase III</h1></a>
       </div>
     </div>
   </main>
