removed infinity stones

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <h1>Marvel Memory Game</h1>
   </header>
   <main>
-    <div class="infinity">
+    <!-- <div class="infinity">
       <div id="space" class="stones">Space</div>
       <div id="reality" class="stones">Reality</div>
       <div id="mind" class="stones">Mind</div>
       <div id="power" class="stones">Power</div>
       <div id="time" class="stones">Time</div>
       <div id="soul" class="stones">Soul</div>
-    </div>
+    </div> -->
     <div class="container">
       <div id="phase1" class="difficulty btn">
         <a href="phase1.html"><h1>Phase I</h1></a>
@@ -38,6 +38,6 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/home.js"></script>
+  <!-- <script src="js/home.js"></script> -->
   </body>
 </html>
